--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,14 @@
 	<properties>
 		<java.version>17</java.version>
 		<modelmapper.version>2.3.0</modelmapper.version>
+		<springdoc.version>1.6.9</springdoc.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
