--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.2</version>
+<!--		<version>3.0.2</version>-->
+		<version>2.1.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.venicios</groupId>
@@ -16,15 +17,10 @@
 	<properties>
 		<java.version>11</java.version>
 		<modelmapper.version>2.3.0</modelmapper.version>
-		<springdoc.version>1.6.4</springdoc.version>
+		<spring-fox.version>2.9.2</spring-fox.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.4</version>
-		</dependency>
-<!--		<dependency>-->
+	<!--		<dependency>-->
 <!--			<groupId>org.apache.httpcomponents</groupId>-->
 <!--			<artifactId>httpclient</artifactId>-->
 <!--			<version>4.5.12</version>-->
@@ -47,13 +43,13 @@
 <!--		</dependency>-->
 		<dependency>
 			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${spring-fox.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
-			<version>3.0.0</version>
+			<version>${spring-fox.version}</version>
 		</dependency>
 
 
@@ -90,7 +86,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
+			<version>42.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
